--- a/.github/workflows/nest-cd.yml
+++ b/.github/workflows/nest-cd.yml
@@ -17,7 +17,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd ${{ secrets.DEPLOY_WORK_DIR }}
+            cd ${{ secrets.WORK_DIR }}
             git checkout ${{ secrets.DEPLOYMENT_BRANCH }}
             git pull
             docker compose up -d --build
